--- a/package.json
+++ b/package.json
@@ -5,32 +5,32 @@
     "description": "Super Bowl pool with passport authentication",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
-      "bcrypt": "~5.0.1",
-      "connect-mongo": "~3.2.0",
-      "cookie-parser": "~1.4.5",
-      "dotenv": "^8.2.0",
-      "express": "^4.16.1",
-      "express-session": "~1.17.1",
-      "express-validator": "^6.14.0",
-      "mongodb": "^3.6.1",
-      "mustache-express": "^1.3.2",
-      "passport": "~0.4.1",
-      "passport-local": "~1.0.0",
-      "uuid": "^9.0.0"
+        "bcrypt": "~5.0.1",
+        "connect-mongo": "~3.2.0",
+        "cookie-parser": "~1.4.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.16.1",
+        "express-session": "~1.17.1",
+        "express-validator": "^6.14.0",
+        "mongodb": "^3.6.1",
+        "mustache-express": "^1.3.2",
+        "passport": "~0.4.1",
+        "passport-local": "~1.0.0",
+        "serve-favicon": "^2.5.0",
+        "uuid": "^9.0.0"
     },
     "keywords": [
-      "node",
-      "express",
-      "mustache",
-      "passport"
+        "node",
+        "express",
+        "mustache",
+        "passport"
     ],
     "license": "MIT",
     "devDependencies": {
-      "nodemon": "^2.0.4"
+        "nodemon": "^2.0.4"
     }
-  }
-  
+}
